# SinsGuide

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini  review-regex-feature.md  ui_mockup.html
.github/ISSUE_TEMPLATE/: ai_fix.yaml  bug_report.yaml  feature_request.yaml
.github/workflows/: ai-address-review.yml  ai-fix-comment.yml  ai-fix.yml  ai-review.yml  auto-merge.yml  ci.yml  flatpak.yml  update-snapshots.yml
docs/development/: branching-strategy.md
docs/packaging/: flatpak-plan.md
packaging/: com.sin_guide.SinsGuide.desktop  com.sin_guide.SinsGuide.metainfo.xml  com.sin_guide.SinsGuide.yml  requirements.txt
scripts/: agent-lib.sh  ai-agent.sh
sin_guide/: README.md  app.py  requirements.txt
sin_guide/config/: defaults.py  manager.py
sin_guide/core/: exp_calculator.py  gem_cutter.py  gem_ocr.py  guide_engine.py  log_parser.py  regex_manager.py  timer.py
sin_guide/data/: zone_rewards.py  zones.json
sin_guide/overlay/: gem_widget.py  main_window.py  regex_widget.py  settings_panel.py  step_renderer.py  window_tracker.py
sin_guide/utils/: pob_parser.py  steam_discovery.py
tests/: conftest.py  test_config_manager.py  test_exp_calculator.py  test_gem_cutter.py  test_gem_ocr.py  test_gem_widget.py  test_guide_engine.py  test_log_parser.py  test_overlay_behavior.py  test_overlay_resize.py  test_pob_parser.py  test_regex_manager.py  test_settings_panel.py  test_steam_paths.py  test_timer.py  test_window_tracker.py  test_zone_rewards.py
tests/visual/: test_gem_widget_states.py  test_overlay_states.py
(+3 files in other folders)
