[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sins-guide"
version = "0.1.0"
description = "A Path of Exile 2 campaign tracker and overlay for Linux"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6.0",
    "pynput>=1.7.6",
    "requests>=2.31.0",
    "python-xlib>=0.33",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/jay9297/SinsGuide"

[project.scripts]
sins-guide = "sin_guide.app:main"

[tool.setuptools.packages.find]
include = ["sin_guide*"]
